[package]
name = "rotgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"

[dependencies.serde]
verison = "^1.0.59"

[dependencies.serde_derive]
version = "^1.0.59"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

